# TravelTown

./: CMakeLists.txt  README.md
assets/data/: buildings.json
include/buildings/: Building.hpp  Lodging.hpp  SportFacility.hpp  Transport.hpp
include/core/: BuildingCatalog.hpp  Grid.hpp  InputHandler.hpp  Tile.hpp
include/economy/: GameClock.hpp  RessourceManager.hpp  TaxSystem.hpp  Treasury.hpp  UpkeepSystem.hpp
include/population/: Citizen.hpp  PopulationManager.hpp
include/ui/: GridRenderer.hpp  HUD.hpp
src/: main.cpp
